--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,7 @@
 }
 
 :root {
-    --color-bg: #1f1f38
+    --color-bg: #1f1f38;
     --color-bg-variant: #2c2c6c;
     --color-primary: #4db5ff;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
@@ -33,5 +33,8 @@ html {
 
 body {
     font-family: 'Poppins', sans-serif;
-
+    background: var(--color-bg);
+    color: var(--color-white);
+    line-height: 1.7;
+    /* background-image: url() */
 }
