--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,11 +41,19 @@ body {
     background-image: url(../assets/bg-texture.png)
 }
 
-/* --------Large Screens--------------- */
+/* --------Average Screens--------------- */
 
 .container {
     width: var(--container-width-lg);
     margin: 0 auto;
+}
+
+h1,
+h2, 
+h3,
+h4,
+h5 {
+    font-weight: 500;
 }
 
 h1 {
@@ -56,7 +64,8 @@ section {
     margin-top: 8rem;
 }
 
-section > h2, section > h5 {
+section > h2, 
+section > h5 {
     text-align: center;
     color: var(--color-light);
 }
@@ -67,12 +76,16 @@ section > h2 {
 }
 
 .text-light {
-    color: var(--color-primary);
-    tansition : var(--transition);
+    color: var(--color-light);
 
 }
 
-a.hover {
+a {
+    color: var(--color-primary);
+    transition: var(--transition);
+}
+
+a:hover {
     color: var(--color-white);
 }
 
@@ -83,7 +96,7 @@ a.hover {
     padding: 0.75rem 1.2rem;
     border-radius: 0.4rem;
     cursor: pointer;
-    border: 1 px solid var(--color-primary);
+    border: 1px solid var(--color-primary);
     transition: var(--transition); 
 }
 
@@ -94,7 +107,7 @@ a.hover {
 }
 
 .btn-primary {
-    background: var(-color-primary);
+    background: var(--color-primary);
     color: var(--color-bg);
 }
 
