--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -119,7 +119,7 @@ img {
 
 /* --------- Medium Screens ------- */
 
-@media screen and (max-width: 1024px;){
+@media screen and (max-width: 1024px){
     .container {
         width: var(--container-width-md);
     }
@@ -131,7 +131,7 @@ img {
 
 /* --------- Small Screens------- */
 
-@media screen and (max-width: 600px;){
+@media screen and (max-width: 600px){
     .container {
         width: var(--container-width-sm);
     }
