--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -2,18 +2,19 @@
     width: 58%;
     display: grid;
     grid-template-columns: 30% 58%;
-    gap: 12%;
+    gap: 8%;
 }
 
 .contact__options {
     display: flex;
-    gap: 1.2rem;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .contact__option {
     background: var(--color-bg-variant);
-    padding: 1.2rem;
-    border-radius: 1.2rem;
+    padding: 1.8rem;
+    border-radius: 1rem;
     text-align: center;
     border: 1px solid transparent;
     transition: var(--transition);
@@ -55,6 +56,7 @@ input, textarea {
 
 @media screen and (max-width: 1024px){
     .contact__options {
+        flex-direction: row;
         justify-content: center;
     }
     .container.contact__container {
