--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -78,6 +78,10 @@
         margin: 2rem auto 4rem;
     }
 
+    .about__me-img {
+        width: 80%;
+    }
+
     .about__content p {
         margin: 1rem 0 1.5rem;
     }
