--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,10 +11,10 @@
 }
 
 :root {
-    --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
-    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-bg: #543d61;
+    --color-bg-variant: #5d2c6c;
+    --color-primary: #7f4dff;
+    --color-primary-variant: rgba(169, 77, 255, 0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
 
