--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,9 +11,9 @@
 }
 
 :root {
-    --color-bg: #543d61;
+    --color-bg: rgb(56,34,57);
     --color-bg-variant: #5d2c6c;
-    --color-primary: #7f4dff;
+    --color-primary: #ffff00aa;
     --color-primary-variant: rgba(169, 77, 255, 0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
